@@ -559,6 +559,11 @@ speed_mpn_lshift (struct speed_params *s)
   SPEED_ROUTINE_MPN_UNARY_1 (mpn_lshift);
 }
 double
+speed_mpn_lshiftc (struct speed_params *s)
+{
+  SPEED_ROUTINE_MPN_UNARY_1 (mpn_lshiftc);
+}
+double
 speed_mpn_rshift (struct speed_params *s)
 {
   SPEED_ROUTINE_MPN_UNARY_1 (mpn_rshift);
